--- a/analysis/interior_storage.Rmd
+++ b/analysis/interior_storage.Rmd
@@ -7,15 +7,14 @@ editor_options:
   chunk_output_type: console
 ---
 
-
-```{r set_options_global, include = FALSE}
-knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+```{r parent, child = "/nfs/kryo/work/jenmueller/emlr_cant/utilities/setup_obs.Rmd"}
+# this chunk runs the code stored in setup.Rmd
+# if required, please refer to instructions given here:
+# https://jdblischak.github.io/workflowr/articles/wflow-07-common-code.html
 ```
 
-
 ```{r load_library}
-library(tidyverse)
-theme_set(theme_linedraw())
+library(ggnewscale)
 ```
 
 
@@ -24,6 +23,7 @@ theme_set(theme_linedraw())
 ```{r set_file_path}
 
 path_updata <- "/nfs/kryo/work/updata/"
+path_emlr_preprocessing <- "/nfs/kryo/work/jenmueller/emlr_cant/observations/preprocessing/"
 
 file_khatiwala <- paste0(path_updata,
                          "cant_khatiwala_2009/carbon_inventory_khatiwala_2009.txt")
@@ -31,6 +31,26 @@ file_khatiwala <- paste0(path_updata,
 
 ```
 
+## Gruber 2019
+
+```{r read_G19}
+
+dcant_inv_G19 <-
+  read_csv(paste(path_emlr_preprocessing,
+                  "G19_dcant_inv.csv",
+                  sep = ""))
+
+```
+
+## Sabine 2004
+
+```{r read_S04}
+
+tcant_inv_S04 <-
+  read_csv(paste(path_emlr_preprocessing,
+                  "S04_tcant_inv.csv", sep = ""))
+
+```
 
 ## Khatiwala
 
@@ -39,6 +59,81 @@ file_khatiwala <- paste0(path_updata,
 khatiwala <- read_table2(file_khatiwala)
 
 ```
+
+
+
+# Column inventory map
+
+```{r merge_G19_S04}
+
+tcant_2007 <- full_join(dcant_inv_G19,
+                        tcant_inv_S04)
+
+tcant_2007 <- tcant_2007 %>% 
+  mutate(data_missing = if_else(is.na(dcant), "G19", "available"),
+         data_missing = if_else(is.na(tcant), "S04", data_missing),
+         data_missing = if_else(is.na(tcant) & is.na(dcant), "S04&G19", data_missing),
+         tcant = tcant + dcant,
+         tcant_pos = tcant_pos + dcant_pos) %>% 
+  select(-c(inv_depth, basin_AIP)) %>% 
+  rename(tcant_all = tcant,
+         dcant_all = dcant) 
+
+tcant_2007_contribution <- tcant_2007 %>% 
+  mutate(G19_contribution_all = 100* dcant_all / tcant_all,
+         G19_contribution_pos = 100* dcant_pos / tcant_pos) %>% 
+  select(-starts_with(c("dcant", "tcant", "data"))) %>% 
+  pivot_longer(starts_with("G19"),
+               names_to = "estimate",
+               values_to = "G19_contribution",
+               names_prefix = "G19_contribution_")
+
+tcant_2007 <- tcant_2007 %>% 
+  select(-starts_with("dcant")) %>% 
+  pivot_longer(starts_with("tcant"),
+               names_to = "estimate",
+               values_to = "tcant",
+               names_prefix = "tcant_") %>% 
+  mutate(tcant_disc = cut(tcant, seq(-100,200,10)),
+         tcant_disc = fct_rev(tcant_disc))
+
+```
+
+```{r plot_maps, fig.asp=1}
+
+
+map +
+  # geom_tile(data = tcant_2007 %>% filter(data_missing != "available"),
+  #           aes(lon, lat, fill = data_missing)) +
+  # scale_fill_brewer(palette = "Set3", direction = -1) +
+  # new_scale("fill")+
+  geom_tile(data = tcant_2007 %>% filter(!is.na(tcant)),
+            aes(lon, lat, fill = tcant)) +
+  scale_fill_continuous_sequential("rocket") +
+  facet_grid(estimate ~ .)
+
+map +
+  geom_tile(
+    data = tcant_2007 %>% filter(!is.na(tcant)),
+    aes(lon, lat, fill=tcant_disc)) +
+  scale_fill_discrete_sequential("rocket", rev = FALSE) +
+  facet_grid(estimate ~ .)
+
+
+tcant_2007_contribution <- tcant_2007_contribution %>% 
+  mutate(G19_contribution_disc = cut(G19_contribution, c(-Inf,seq(10,50,5), Inf)),
+         G19_contribution_disc = fct_rev(G19_contribution_disc))
+
+map +
+  geom_tile(data = tcant_2007_contribution %>% filter(!is.na(G19_contribution)),
+            aes(lon, lat, fill = G19_contribution_disc)) +
+  scale_fill_discrete_sequential("rocket", rev = FALSE) +
+  facet_grid(estimate ~ .)
+
+```
+
+
+
 
 # Time series
 
