--- a/analysis/interior_storage.Rmd
+++ b/analysis/interior_storage.Rmd
@@ -317,6 +317,7 @@ khatiwala_atm <- left_join(khatiwala %>% rename(year = Year),
 
 
 Ocean_Sink %>%
+  filter(year >= 1959) %>% 
   ggplot() +
   geom_path(data = khatiwala_atm,
             aes(pCO2, value,
@@ -367,7 +368,10 @@ Ocean_Sink %>%
   theme(legend.title = element_blank(),
         legend.position = c(0.8,0.2))
 
-
+ggsave(here::here("output/Fig1a.jpg"))
+ggsave(here::here("output/Fig1a.pdf"))
+ggsave(here::here("output/Fig1a.eps"))
+ggsave(here::here("output/Fig1a.svg"))
 
 ```
 
