--- a/analysis/interior_storage.Rmd
+++ b/analysis/interior_storage.Rmd
@@ -94,7 +94,9 @@ co2_atm_reccap2 <-
 ```
 
 
-# Column inventory map
+# Column inventories
+
+## Join data
 
 ```{r merge_G19_S04}
 
@@ -117,26 +119,28 @@ tcant_2007_contribution <- tcant_2007 %>%
   select(-starts_with(c("dcant", "tcant", "data")))
 
 tcant_2007 <- tcant_2007 %>% 
-  select(lon, lat, tcant = tcant_pos, data_missing) %>% 
-  mutate(tcant_disc = cut(tcant, seq(-100,200,10)),
-         tcant_disc = fct_rev(tcant_disc))
+  select(lon, lat, tcant = tcant_pos, data_missing)
 
 ```
 
-```{r plot_maps, fig.asp=1}
+## Maps
+
+```{r plot_maps, fig.asp=0.5}
 
 cant_label <- expression(atop(C["ANT"],
                                 "[mol" ~ m ^ { -2 }~"]"))
 
-map +
+p_data_coverage <- map +
   geom_tile(data = tcant_2007 %>% filter(data_missing != "available"),
             aes(lon, lat, fill = data_missing)) +
   scale_fill_brewer(palette = "Set1", direction = -1) +
   new_scale("fill") +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank())
+
+p_data_coverage
   
-map +
+p_tcant_continous <- map +
   geom_tile(data = tcant_2007 %>% filter(!is.na(tcant)),
             aes(lon, lat, fill = tcant)) +
   scale_fill_continuous_sequential("rocket",
@@ -146,7 +150,9 @@ map +
     axis.ticks = element_blank()
   )
 
-map +
+p_tcant_continous
+
+p_tcant_binned <- map +
   geom_tile(data = tcant_2007 %>% filter(!is.na(tcant)),
             aes(lon, lat, fill = tcant)) +
   scale_fill_binned_sequential("rocket",
@@ -157,14 +163,14 @@ map +
     axis.ticks = element_blank()
   )
 
-tcant_2007_contribution <- tcant_2007_contribution %>% 
-  mutate(G19_contribution_disc = cut(G19_contribution, c(-Inf,seq(10,50,5), Inf)),
-         G19_contribution_disc = fct_rev(G19_contribution_disc))
+p_tcant_binned
 
-map +
-  geom_tile(data = tcant_2007_contribution %>% filter(!is.na(G19_contribution)),
-            aes(lon, lat, fill = G19_contribution_disc)) +
-  scale_fill_discrete_sequential("rocket", rev = FALSE)
+p_tcant_continous + p_tcant_binned + p_data_coverage + 
+  plot_layout(ncol = 1)
+
+ggsave(here::here("output/Fig1b.jpg"),
+       width = 6,
+       height = 6)
 
 map +
   geom_tile(data = tcant_2007_contribution %>% filter(!is.na(G19_contribution)),
@@ -177,6 +183,23 @@ map +
 
 ```
 
+## Write files
+
+```{r write column inventory files}
+
+tcant_2007 <- tcant_2007 %>%
+  mutate(lon = if_else(lon > 360, lon - 360, lon))
+
+tcant_2007 %>% 
+  ggplot(aes(lon, lat)) +
+  geom_tile() +
+  coord_quickmap()
+
+tcant_2007 %>% 
+  write_csv(here::here("output/Fig1b_data.csv"))
+
+
+```
 
 
 
