--- a/analysis/interior_storage.Rmd
+++ b/analysis/interior_storage.Rmd
@@ -16,6 +16,8 @@ editor_options:
 ```{r load_library}
 library(ggnewscale)
 library(scales)
+library(gtable)
+library(grid)
 ```
 
 
@@ -187,7 +189,7 @@ map +
 
 ## Write files
 
-```{r write column inventory files}
+```{r write_column_inventory_files}
 
 tcant_2007 <- tcant_2007 %>%
   mutate(lon = if_else(lon > 360, lon - 360, lon))
@@ -360,7 +362,7 @@ tcant <- bind_rows(tcant_ts,
                    Ocean_Sink,
                    khatiwala_atm)
 
-tcant %>%
+p <- tcant %>%
   filter(method == "none") %>%
   ggplot(
     aes(
@@ -380,8 +382,7 @@ tcant %>%
     alpha = 0.3,
     col = NA
   ) +
-  geom_errorbar(data = tcant %>% filter(method %in% c("Delta*C*\"*\"")),
-                width = 2) +
+  geom_linerange(data = tcant %>% filter(method %in% c("Delta*C*\"*\""))) +
   geom_point(data = tcant %>% filter(method %in% c("Delta*C*\"*\""))) +
   scale_fill_manual(values = c("firebrick", "black", "steelblue"),
                     labels = parse_format()) +
@@ -390,8 +391,6 @@ tcant %>%
   scale_shape_manual(values = c(19, NA, NA),
                      labels = parse_format()) +
   scale_linetype_manual(values = c(1, 1, 1),
-                        labels = parse_format()) +
-  scale_size_manual(values = c(1, 1, 1),
                         labels = parse_format()) +
   guides(
     linetype = guide_legend(override.aes = list(linetype = c(1, 1, 1))),
@@ -403,23 +402,94 @@ tcant %>%
   theme(
     legend.title = element_blank(),
     legend.position = c(0.8, 0.2),
+    legend.background = element_rect(fill = "transparent"),
     legend.text.align = 0
   )
 
-ggsave(here::here("output/Fig1a.jpg"))
-ggsave(here::here("output/Fig1a.pdf"))
-ggsave(here::here("output/Fig1a.eps"))
-ggsave(here::here("output/Fig1a.svg"))
+```
 
 
-# thresholds <- data.frame(colour = "vertical", x = 1, ymin = 0.950, ymax = 1.050) 
-# ggplot() + 
-#   geom_hline(aes(yintercept = 1, colour = "horizontal"), show.legend = NA) +
-#   geom_linerange(data = thresholds, 
-#                  mapping = aes(x = x, ymin = ymin, ymax = ymax, linetype = colour)) +
-#   theme(legend.title = element_blank())
+```{r redraw_plot}
+
+g <- ggplotGrob(p)
+
+## then we have to find out which child grob represents the legend
+## the grob with the name "guide-box" is the one we are looking for
+guide <- which(g$layout$name == "guide-box")
+
+## the legend consists of guides and the background, go for the guides
+guide_lines <- which(g$grobs[[guide]]$layout$name == "guides")
+
+## the guides contain a lot of different grobs
+## if you look at g$grobs[[guide]]$grobs[[guide_lines]] you will see
+## 4 segments representing the 4 lines, these are at position 4-5 and 7-8
+## segments at 4 and 7 are the vertical lines and 5 and 8 the horizontal lines
+## NOTE: this you have to find out "manually", if you change the order in your
+##       ggplot the positions will be exactly switched
+##       one could write e function which checks whether a line is horizontal
+##       or vertical but this is most likely an overkill if this is for a 
+##       single plot
+
+## we can use gtable_filter to remove the unwanted lines
+## it requires a regular expression formed by the names of the grobs to filter out
+remove_pattern <- paste(g$grobs[[guide]]$grobs[[guide_lines]]$layout$name[c(4,11,16)],
+    collapse = "|")
+
+## write back the filtered gtable
+g$grobs[[guide]]$grobs[[guide_lines]] <- 
+   gtable_filter(g$grobs[[guide]]$grobs[[guide_lines]],
+                 remove_pattern, 
+                 invert = TRUE)
+
+
+## draw the grid
+grid.draw(g)
+
+
+
+pdf(here::here("output/Fig1a.pdf"),
+    width = 7,
+    height = 5)
+print(grid.draw(g))
+dev.off()
+
+jpeg(
+  here::here("output/Fig1a.jpg"),
+  width = 7,
+  height = 5,
+  units = "in",
+  res = 300,
+  quality = 100
+)
+print(grid.draw(g))
+dev.off()
+
+
+
 
 ```
+
+## Write files
+
+```{r write_time_series_files}
+
+tcant %>% 
+  mutate(method = str_replace(method, "~", " "),
+         method = str_remove_all(method, "\""),
+         method = str_remove_all(method, "\\*"),
+         method = str_replace(method, "DeltaC", "dC*"),
+         )
+
+
+tcant %>% 
+  write_csv(here::here("output/Fig1a_data.csv"))
+
+
+```
+
+
+
+
 
 
 ```{r time_series_delta, fig.asp=0.8, eval=FALSE}
