finalized storage vs pco2 plot and write data

--- a/analysis/interior_storage.Rmd
+++ b/analysis/interior_storage.Rmd
@@ -473,7 +473,7 @@ dev.off()
 
 ```{r write_time_series_files}
 
-tcant %>% 
+tcant <- tcant %>% 
   mutate(method = str_replace(method, "~", " "),
          method = str_remove_all(method, "\""),
          method = str_remove_all(method, "\\*"),
