--- a/analysis/interior_storage.Rmd
+++ b/analysis/interior_storage.Rmd
@@ -496,28 +496,37 @@ beta <- 1.25
 co2_atm_pi_value <- 275
 tCant_col <- "forestgreen"
 
-g_inset <- tcant %>%
-  filter(method %in% c("Ocean~inversion~(Green*\"'\"*s~\"function\")")) %>% 
+
+g_inset <-
   ggplot() +
-  geom_line(aes(year, (pCO2 - co2_atm_pi_value) * beta),
+  geom_line(data = tcant %>%
+              distinct(year, pCO2),
+            aes(year, (pCO2 - co2_atm_pi_value) * beta),
             col = tCant_col) +
-  geom_path(aes(year, tcant)) +
+  geom_path(data = tcant %>%
+              filter(
+                method %in% c("Ocean~inversion~(Green*\"'\"*s~\"function\")")
+              ),
+            aes(year, tcant)) +
   scale_y_continuous(name = expression(C[ANT] ~ inventory ~ "[PgC]"),
-                     sec.axis = sec_axis( ~ (. / beta + co2_atm_pi_value),
-                                          name = expression(Atm. ~ pCO[2] ~ "[µatm]"))) +
+                     sec.axis = sec_axis(~ (. / beta + co2_atm_pi_value),
+                                         name = expression(Atm. ~ pCO[2] ~ "[µatm]"),
+                                         breaks = seq(280,420,40))) +
   scale_x_continuous(name = "Year", breaks = seq(1800, 2000, 50)) +
   scale_color_manual(values = "black") +
   theme_classic() +
   theme(
     axis.title.y.right = element_text(color = tCant_col),
     axis.text.y.right = element_text(color = tCant_col),
-    axis.ticks.y.right = element_line(color = tCant_col), 
+    axis.ticks.y.right = element_line(color = tCant_col),
     legend.background = element_rect(fill = "transparent"),
     plot.background = element_rect(fill = "transparent",
                                    color = "transparent"),
     legend.position = c(0.85, 0.2),
     legend.title = element_blank()
   )
+
+g_inset
 
 grid.draw(g)
 vp = viewport(x=.35, y=.8, width=.45, height=.3)
